# greeting-kafka-operator

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
kubernetes/: cr-greeting-topic.yaml  cr-test-topic.yaml  crd.yaml  greeting-kafka-operator.yaml  greeting-topic.yaml  resourcedefinition.yaml  test-topic.yaml
src/: greeting_topic.rs  kafka_topic.rs  kafka_topic_controller.rs  kafka_topic_helper.rs  main.rs
