[package]
name = "greeting-kafka-operator"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45", features = [
    "macros",
    "rt-multi-thread",
] } # Macros for easy project setup and testing, multi-threaded runtime for best utilization of resources
kube = { version = "1.0.0", default-features = true, features = [
    "derive",
    "runtime",
] } # Library for talking to Kubernetes API
k8s-openapi = { version = "0.25.0", default-features = false, features = [
    "v1_33",
] } # Kube-rs depends on k8s-openapi
futures = "0.3"
# All serde dependencies are used to serialize/deserialize CRDs and other Kubernetes-related structs
serde = "1"
serde_json = "1.0"
schemars = "0.8"
thiserror = "2"    # Custom Error definitions and convenient error mappings
rdkafka = "0.29"
kube-client = "1.1.0"
dotenv = "0.15.0"
greeting_otel={git = "https://github.com/arnecdn/greeting_otel_lib", version = "0.30.0"}
tracing = { version = "0.1.40", features = ["std"]}
tracing-opentelemetry = "0.31.0"

log = "0.4.27"